Changes in Task3